# sg-matter

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  enocean.c  enocean.h  flash.c  flash.h  hardware.c  hardware.h  main.c  matter.cpp  matter.h  motor.c  motor.h
